--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
 
     <script src="index.js"></script>
-    <title>MuseumGuide</title>
+    <title>Museum Guide!</title>
      
 
 
