--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <img class = "portugal" src = "/home/julia/Downloads/belem.jpeg">
 <img class = "portugal" src = "/home/julia/Downloads/algarve.jpeg">
 <img class = "portugal" src = "/home/julia/Downloads/bridge.jpeg">
-<img class = "portugal" src = "/home/julia/Downloads/aveiro.jpeg">
+<img class = "portugal" src = "/home/julia/Downloads/aveiro.jpeg" href="www.google.com">
 <img class = "portugal" src = "/home/julia/Downloads/traininlissabon.jpeg">
 
 
