--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <h2>Gallery</h2>
 <img class = "portugal" src = "/home/julia/Downloads/belem.jpeg">
 <img class = "portugal" src = "/home/julia/Downloads/algarve.jpeg">
-<img class = "portugal" src = "/home/julia/Downloads/bridge.jpeg">
-<img class = "portugal" src = "/home/julia/Downloads/aveiro.jpeg" href="www.google.com">
+<img class = "portugal" src = "/home/julia/Downloads/bridge.jpeg" /> <a href="bridge.html">
+<img class="portugal" src="/home/julia/Downloads/aveiro.jpeg" /> <a href="aveiro1.html">
 <img class = "portugal" src = "/home/julia/Downloads/traininlissabon.jpeg">
 
 
