The city's of Portugal

--- a/algarve.html
+++ b/algarve.html
@@ -1,5 +1,5 @@
-<html><h1>Bridge of Lisbon!</h1>
-<img class = "portugal" src = "/home/julia/Downloads/bridge.jpeg" />
+<html><h1>A amazing beach!</h1>
+<img class = "portugal" src = "/home/julia/Downloads/algarve.jpeg" />
 <style>
          
   .portugal {
