--- a/belem.html
+++ b/belem.html
@@ -1,5 +1,5 @@
-<html><h1>Bridge of Lisbon!</h1>
-<img class = "portugal" src = "/home/julia/Downloads/bridge.jpeg" />
+<html><h1>The beauty of Belem!</h1>
+<img class = "portugal" src = "/home/julia/Downloads/belem.jpeg" />
 <style>
          
   .portugal {
