--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 <h1> Julia's Mobile Museum App </h1> 
 <section id="gallery"></section>
 <h2>Gallery</h2>
-<img class = "portugal" src = "/home/julia/Downloads/belem.jpeg">
-<img class = "portugal" src = "/home/julia/Downloads/algarve.jpeg">
+<img class = "portugal" src = "/home/julia/Downloads/belem.jpeg" /> <a href="belem.html"></a>
+<img class = "portugal" src = "/home/julia/Downloads/algarve.jpeg" /> <a href="algarve.html"></a>
 <img class = "portugal" src = "/home/julia/Downloads/bridge.jpeg" /> <a href="bridge.html">
 <img class="portugal" src="/home/julia/Downloads/aveiro.jpeg" /> <a href="aveiro1.html">
-<img class = "portugal" src = "/home/julia/Downloads/traininlissabon.jpeg">
+<img class = "portugal" src = "/home/julia/Downloads/traininlissabon.jpeg" /> <a href="trainlissabon.html"></a>
 
 
 
