--- a/aveiro1.html
+++ b/aveiro1.html
@@ -1,3 +1,16 @@
 <html><h1>Welcome to Aveiro!</h1>
 <img class = "portugal" src = "/home/julia/Downloads/aveiro.jpeg" />
+<style>
+         
+    .portugal {
+     max-width: 80%;
+     max-height: 20rem;
+     margin: 1rem;
+
+    }
+
+      
+
+
+ </style>
 </html>
