--- a/trainlissabon.html
+++ b/trainlissabon.html
@@ -1,5 +1,5 @@
-<html><h1>Bridge of Lisbon!</h1>
-<img class = "portugal" src = "/home/julia/Downloads/bridge.jpeg" />
+<html><h1>The train!</h1>
+<img class = "/home/julia/Downloads/traininlissabon.jpeg" />
 <style>
          
   .portugal {
